Some animation updates

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <h1 class="fade">Yalcin Imeryuz</h1>
+    <h4 class="text-muted fade-sub-title">GCSE Computer Science Student at NAS Dubai</h4>
     <div class="main">
         <div class="down">
-            <h4 class="text-muted">GCSE Computer Science Student at NAS Dubai</h4>
             <h3>Why did I choose Computer Science as one of my GCSEs?</h3>
             <p>I chose Computer Science as one of my GCSEs because Computer Science opens up a lot of job opportunities as developers are highly sought after and also because I programme outside of school in Python and Javascript.</p>
             <h3>What other GCSE subjects did I choose and why?</h3>
